crates/cadenza-compiler/test-data/semantics/measures-comparison-requires-matching-dimensions.expected
error: incompatible dimensions in comparison
 --> test.cdz:3:1
  |
3 | 100meter > 50kilogram
  | ^^^^^^^^^^^^^^^^^^^^^ cannot compare `meter` and `kilogram`
  |
  = note: left side has dimension: meter
  = note: right side has dimension: kilogram
  = help: comparison requires compatible dimensions