crates/cadenza-compiler/test-data/semantics/measures-comparison-requires-matching-dimensions.cdz
measure meter
measure kilogram
100meter > 50kilogram